# 3DSlicer-DeepLearning-Seg-Module

./: README.md
CNNSeg/CNNSeg/: CMakeLists.txt
CNNSeg/CNNSeg/CNNSeg/: CMakeLists.txt  CNNSeg.py
CNNSeg/IMGDenoise/IMGDenoise/: CMakeLists.txt
CNNSeg/IMGDenoise/IMGDenoise/IMGDenoise/: CMakeLists.txt  IMGDenoise.py  PET_denoiser.h5  PET_denoiser_phantom_trained.h5
